--- a/packages/address-table/package.json
+++ b/packages/address-table/package.json
@@ -1,5 +1,6 @@
 {
   "name": "address-table",
+  "version": "1.0.0",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
