--- a/packages/custom-token/package.json
+++ b/packages/custom-token/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "outbox-execute",
-  "license": "Apache-2.0",
+  "name": "custom-token",
   "version": "1.0.0",
   "scripts": {
-    "build": "hardhat compile"
+    "build": "hardhat compile",
+    "token-deposit": "hardhat run scripts/exec.js"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@openzeppelin/contracts": "^3.4.2",
     "chai": "^4.3.4",
     "ethers": "^5.1.2",
-    "hardhat": "^2.2.0"
+    "hardhat": "^2.6.6"
   },
   "dependencies": {
     "arb-ts": "^1.0.0-beta.4",
