--- a/packages/greeter/package.json
+++ b/packages/greeter/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "hardhat compile",
     "greeterFromL1": "hardhat run scripts/execL1.js",
-    "greeterFromL2": "hardhat run scripts/execL2.js"
+    "greeterFromL2": "hardhat run scripts/execL2.js",
     "greeter": "hardhat run scripts/exec.js"
   },
   "devDependencies": {
